zishao-v410-check-fix-2-0512

--- a/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
@@ -12,7 +12,7 @@ Tables in OceanBase Database can be classified into partitioned tables and non-p
 
 * A non-partitioned table contains only one partition. 
 
-For more information, see [Overview](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/2.table-of-mysql-mode/1.table-overview-of-mysql-mode.md). 
+<!-- For more information, see [Overview](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/2.table-of-mysql-mode/1.table-overview-of-mysql-mode.md).  -->
 
 ## Preparations
 
@@ -87,7 +87,7 @@ Observe the following requirements when you define primary key columns:
 
 * We recommend that a PRIMARY KEY constraint be explicitly identified by its name. For example, name a PRIMARY KEY constraint "PK_xxx". 
 
-For more information about PRIMARY KEY constraints, see [PRIMARY KEY constraints](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/7.data-integrity-of-mysql-mode/2.integrity-constraint-type-of-mysql-mode/4.primary-key-constraint-of-mysql-mode.md). 
+For more information about PRIMARY KEY constraints, see [PRIMARY KEY constraints](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md). 
 
 Example 2: Define a `PRIMARY KEY` constraint on multiple columns. 
 
@@ -293,7 +293,7 @@ In MySQL mode of OceanBase Database, the following partitioning methods are supp
 
 Based on the partitioning dimension, partitioned tables are classified into partitioned tables and subpartitioned tables. Subpartitioned tables are secondary partitioned tables. Therefore, a partitioned table has one partitioning key and a subpartitioned table has two partitioning keys. A subpartitioned table can apply different partitioning strategies. In OceanBase Database, subpartitioned tables are classified into template-based subpartitioned tables and non-template-based subpartitioned tables. 
 
-For more information about partitioning, see [Partitioning](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/4.partition-of-mysql-mode/1.partitions-overview-of-mysql-mode.md). 
+<!-- For more information about partitioning, see [Partitioning](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/4.partition-of-mysql-mode/1.partitions-overview-of-mysql-mode.md).  -->
 
 **RANGE and RANGE COLUMNS partitioning**
 
@@ -470,8 +470,6 @@ In this example, KEY partitioning supports a string column as the partitioning k
 
 ## Subsequent operations
 
-* [Create a table group](4.create-a-index-of-mysql-mode.md)
+* [Create an index](4.create-a-index-of-mysql-mode.md)
 
-* [Create an index](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md)
-
-* [Manage partitions](7.reference\3.user-guide-old\8.distributed-storage-management\2.manage-partition-table\2.mysql-1\1.partition-overview-6.md)
+* [Manage partitions](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md)
