zhshao-v410-check-fix-0512-3

--- a/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
@@ -12,7 +12,7 @@ Indexes can be classified into unique indexes and non-unique indexes.
 
 * A column with a non-unique index may contain identical values. 
 
-For more information about unique and non-unique indexes, see [Unique and non-unique indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/3.unique-and-non-unique-indexes-of-oracle-mode.md). 
+<!-- For more information about unique and non-unique indexes, see [Unique and non-unique indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/3.unique-and-non-unique-indexes-of-oracle-mode.md).  -->
 
 In a partitioned table, indexes can also be classified into local indexes and global indexes.
 
@@ -20,7 +20,7 @@ In a partitioned table, indexes can also be classified into local indexes and gl
 
 * The partitioning of a global index is independent of the partitioning of the table. Therefore, one partition of a global index may point to multiple table partitions. 
 
-For more information about local and global indexes, see [Local and global indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/2.local-and-global-indexes-of-oracle-mode.md). 
+<!-- For more information about local and global indexes, see [Local and global indexes](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/3.index-of-oracle-mode/2.local-and-global-indexes-of-oracle-mode.md).  -->
 
 ## Preparations
 
