--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/4.DEBUG_ON.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/4.DEBUG_ON.md
@@ -27,6 +27,6 @@ immediate                   BOOLEAN := FALSE);
 |           **参数**            |                    **解释**                    |
 |-----------------------------|----------------------------------------------|
 | no_client_side_plsql_engine | 应保留其默认值，除非调试会话是从客户端 PL 引擎进行执行的。              |
-| immediate                   | 如果值为 TRUE，在调用期间 interpreter 会立即从常规模式切换到调试模式。 |
+| immediate                   | 如果值为 `TRUE`，在调用期间 interpreter 会立即从常规模式切换到调试模式。 |
 
 
