--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/2.alter-function-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/2.alter-function-oracle.md
@@ -11,7 +11,7 @@ ALTER FUNCTION
 前提条件 
 -------------------------
 
-如果函数在 `SYS` Schema 中，则必须以 `SYSDBA` 身份连接。否则，该函数必须在当前用户的 Schema 中，或者用户必须具有 `ALTER ANY PROCEDURE` 的系统权限。
+如果函数在 `SYS` Schema 中，则必须以 `SYSDBA` 身份连接。否则，该函数必须在当前用户的 Schema 中，或者用户必须具有 `ALTER ANY FUNCTION` 的系统权限。
 
 语法 
 -----------------------
