--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/12.GET_RUNTIME_INFO.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/12.GET_RUNTIME_INFO.md
@@ -3,7 +3,7 @@ GET_RUNTIME_INFO
 
 `GET_RUNTIME_INFO` 函数用于返回当前程序的有关信息。
 
-仅当 `CONTINUE` 参数设置为 0 时才需要使用此函数。
+仅当 `CONTINUE` 函数的 `info_requested` 参数设置为 0 时才需要使用此函数。
 
 
   <main id="notice" type='explain'>
