--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/3.CONTINUE.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/3.CONTINUE.md
@@ -28,11 +28,11 @@ DBMS_DEBUG.CONTINUE (
 
 
 
-|     **参数**     |                                                                                 **解释**                                                                                 |
-|----------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|     **参数**     |                             **解释**                                   |
+|----------------|-----------------------------------------------------------------------------------------|
 | run_info       | 有关程序状态的信息。                                                                                                                                                             |
-| breakflags     | 感兴趣事件的掩码，暂时仅支持 break_next_line、break_any_call、break_any_return 和 abort_execute。 详细信息请参考 [Breakflags](../5.DBMS_DEBUG/1.dbms_debug-overview.md)。 |
-| info_requested | 程序停止时应在 run_info 中返回哪些信息，详细信息请参考 [Information Flags](../5.DBMS_DEBUG/1.dbms_debug-overview.md)。                                                                 |
+| breakflags     | 感兴趣事件的掩码，暂时仅支持 `break_next_line`、`break_any_call`、`break_any_return` 和 `abort_execute`。 详细信息请参考 [Breakflags](../5.DBMS_DEBUG/1.dbms_debug-overview.md)。 |
+| info_requested | 程序停止时应在 `run_info` 中返回哪些信息，详细信息请参考 [Information Flags](../5.DBMS_DEBUG/1.dbms_debug-overview.md)。                                                                 |
 
 
 
