--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/8.DISABLE_BREAKPOINT.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/8.DISABLE_BREAKPOINT.md
@@ -26,7 +26,7 @@ DBMS_DEBUG.DISABLE_BREAKPOINT (
 
 |   **参数**   |           **解释**           |
 |------------|----------------------------|
-| breakpoint | 通过 SET_BREAKPOINT 获得的断点编号。 |
+| breakpoint | 通过 `SET_BREAKPOINT` 获得的断点编号。 |
 
 
 
