--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
@@ -229,9 +229,9 @@ partition_count | subpartition_count:
   1 row in set
   ```
 
-* 修改表 tbl1 中列 col1 的名称为 col2。
+* 修改表 `tbl1` 中列 `col1` 的名称为 `col2`。
 
-```shell
+  ```shell
   obclient> ALTER TABLE tbl1 RENAME COLUMN col1 TO col2;
   Query OK, 0 rows affected
 
@@ -242,6 +242,7 @@ partition_count | subpartition_count:
   | COL2  | VARCHAR2(10) | YES  | NULL | NULL    | NULL  |
   +-------+-------------+------+-----+---------+-------+
   1 row in set 
+  ```
 
 * 增加和删除列。
 
@@ -284,34 +285,34 @@ partition_count | subpartition_count:
     +-------+--------------+------+-----+---------+-------+
     2 rows in set
     ```
-* 为表 `tbl2` 创建唯一性索引。
+  * 为表 `tbl2` 创建唯一性索引。
   
-  ```sql
-  obclient> CREATE TABLE tbl2 (col1 NUMBER(30) PRIMARY KEY,col2 VARCHAR(50), col3 INT);
-  Query OK, 0 rows affected
+    ```sql
+    obclient> CREATE TABLE tbl2 (col1 NUMBER(30) PRIMARY KEY,col2 VARCHAR(50), col3 INT);
+    Query OK, 0 rows affected
 
-  obclient> ALTER TABLE tbl2 ADD CONSTRAINT constraint_TBL2 UNIQUE (col2, col3);
-  Query OK, 0 rows affected 
+    obclient> ALTER TABLE tbl2 ADD CONSTRAINT constraint_TBL2 UNIQUE (col2, col3);
+    Query OK, 0 rows affected 
 
-  obclient [SYS]> DESC tbl2;
-  +-------+--------------+------+-----+---------+-------+
-  | FIELD | TYPE         | NULL | KEY | DEFAULT | EXTRA |
-  +-------+--------------+------+-----+---------+-------+
-  | COL1  | NUMBER(30)   | NO   | PRI | NULL    | NULL  |
-  | COL2  | VARCHAR2(50) | YES  | MUL | NULL    | NULL  |
-  | COL3  | NUMBER(38)   | YES  | NULL | NULL    | NULL  |
-  +-------+--------------+------+-----+---------+-------+
-  3 rows in set
+    obclient [SYS]> DESC tbl2;
+    +-------+--------------+------+-----+---------+-------+
+    | FIELD | TYPE         | NULL | KEY | DEFAULT | EXTRA |
+    +-------+--------------+------+-----+---------+-------+
+    | COL1  | NUMBER(30)   | NO   | PRI | NULL    | NULL  |
+    | COL2  | VARCHAR2(50) | YES  | MUL | NULL    | NULL  |
+    | COL3  | NUMBER(38)   | YES  | NULL | NULL    | NULL  |
+    +-------+--------------+------+-----+---------+-------+
+    3 rows in set
 
-  obclient> INSERT INTO tbl2 VALUES('1','2','2');
-  Query OK, 1 row affected 
+    obclient> INSERT INTO tbl2 VALUES('1','2','2');
+    Query OK, 1 row affected 
 
-  obclient> INSERT INTO tbl2 VALUES('2','2','2');
-  ORA-00001: unique constraint '2-2' for key 'CONSTRAINT_TBL2' violated
+    obclient> INSERT INTO tbl2 VALUES('2','2','2');
+    ORA-00001: unique constraint '2-2' for key 'CONSTRAINT_TBL2' violated
 
-  obclient> INSERT INTO tbl2 VALUES('2','3','2');
-  Query OK, 1 row affected 
-  ```
+    obclient> INSERT INTO tbl2 VALUES('2','3','2');
+    Query OK, 1 row affected 
+    ```
 
 * 为非模板化二级分区表 `tbl3` 的一级分区 `p1` 下添加二级分区 `p1_r4`。
 
