--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/4.collect-statistics-automatically.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/4.collect-statistics-automatically.md
@@ -4,7 +4,7 @@
 
 ## MAINTENANCE WINDOW
 
-OceanBase 数据库定义 `MAINTENANCE WINDOW` 为周一到周日有 7 个自动统计信息收集任务，周一到周五的任务开始时间为 22:00，最大收集时长为 4 小时，周六何周日的开始时间为 6:00，最大收集时长为 20 小时，如下表所示。
+OceanBase 数据库定义 `MAINTENANCE WINDOW` 为周一到周日有 7 个自动统计信息收集任务，周一到周五的任务开始时间为 22:00，最大收集时长为 4 小时，周六和周日的开始时间为 6:00，最大收集时长为 20 小时，如下表所示。
 
 | 维护窗口名字 | 开始时间/频率 | 最大收集时长 |
 | --- | --- | --- |
