--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
@@ -17,7 +17,7 @@ alter_table_action_list:
 
 alter_table_action:
       ADD {column_definition | (column_definition_list)}
-    | ADD [CONSTRAINT [constraint_name]] UNIQUE {INDEX | KEY} [index_name] index_desc
+    | ADD [CONSTRAINT [constraint_name]] UNIQUE (column_name [, column_name ]...)
     | ADD [CONSTRAINT [constraint_name]] FOREIGN KEY (column_name_list) references_clause
     | ADD [CONSTRAINT [constraint_name]] CHECK (expr)
     | ADD CONSTRAINT constraint_name PRIMARY KEY (column_name)
