--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/4.alter-resource-unit.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/4.alter-resource-unit.md
@@ -13,19 +13,21 @@ MAX_CPU [=] cpu_num,
 [MAX_IOPS [=] iops_num,]
 [MIN_CPU [=] cpu_num,]
 [MIN_IOPS [=] iops_num,] 
+[IOPS_WEIGHT [=]iopsweight,]
 [LOG_DISK_SIZE [=] 'size_value'];
 ```
 
 ## 参数解释
 
-|       参数        |                            描述                            |
-|-----------------|----------------------------------------------------------|
-| MEMORY_SIZE  | 指定内存容量，取值范围为 \[1, 512M\]。单位为字节。|
-| MAX_CPU         | 指定 CPU 的最多数量。                                                       |
-| MAX_IOPS        | 指定 IOPS 的最多数量，取值范围为 \[1024,+∞)。                                       |
-| MIN_CPU         | 指定 CPU 的最少数量，取值范围为 \[1024,+∞)。                                                       |
-| MIN_IOPS        | 指定 IOPS 的最少数量。                                                      |
-| LOG_DISK_SIZE | 指定租户的 Unit 日志盘的大小。默认值为内存规格值的 3 倍，最小值为 `2G`。取值范围为 \[2G, +∞)。|
+|     **参数**      |          **描述**          |
+|-----------------|------------------------------|
+| MEMORY_SIZE  | 指定内存容量，最小值为 1G。|
+| MAX_CPU         | 指定 CPU 的最多数量。最小值为 1C。    |
+| MAX_IOPS        | 指定 IOPS 的最多数量，为可选项。最小值为 1024。 |
+| MIN_CPU         | 指定 CPU 的最少数量，为可选项。默认等于 `MAX_CPU`，最小值为 1C。  |
+| MIN_IOPS        | 指定 IOPS 的最少数量，为可选项。最小值为 1024。    |
+| IOPS_WEIGHT     | 指定 IOPS 的权重值，为可选项。|
+| LOG_DISK_SIZE | 指定租户的 Unit 日志盘的大小。默认值为内存规格值的 3 倍，最小值为 `2G`。|
 
 ## 示例
 
