--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/16.show-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/16.show-of-oracle-mode.md
@@ -56,7 +56,7 @@ SHOW {
   | TBL1  | CREATE TABLE "TBL1" (
     "COL1" NUMBER(38),
     "COL2" NUMBER(38)
-  ) COMPRESS FOR ARCHIVE REPLICA_NUM = 2 BLOCK_SIZE = 16384 USE_BLOOM_FILTER = FALSE TABLET_SIZE = 134217728 PCTFREE = 0 |
+  ) COMPRESS FOR ARCHIVE BLOCK_SIZE = 16384 USE_BLOOM_FILTER = FALSE TABLET_SIZE = 134217728 PCTFREE = 0 |
   +-------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
   1 row in set
   ```
