zhishao-v410-check-fix-0512-3

--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/5.add-server.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/5.add-server.md
@@ -15,17 +15,17 @@ Before you deploy OceanBase Cloud Platform (OCP), you must add a server to the s
      <p>Contact OceanBase Technical Support to obtain the default password of the admin account. To ensure account security, change the password upon the first logon. </p>
    </main>
 
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9077796061/p187569.png "image.png")
+   <!-- ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9077796061/p187569.png "image.png") -->
 
 2. In the left-side navigation pane, choose **Server** \> **Server Management**.
 
 3. In the upper-right corner of the page, click **Add Server**.
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/1%E6%B7%BB%E5%8A%A0%E6%9C%8D%E5%8A%A1%E5%99%A8.png)
+   <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/1%E6%B7%BB%E5%8A%A0%E6%9C%8D%E5%8A%A1%E5%99%A8.png) -->
 
 4. In the **Add Server** dialog box that appears, enter the server information.
 
-   ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/2%E6%B7%BB%E5%8A%A0%E6%9C%8D%E5%8A%A1%E5%99%A8.png)
+   <!-- ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/2%E6%B7%BB%E5%8A%A0%E6%9C%8D%E5%8A%A1%E5%99%A8.png) -->
 
    You must set the following fields in the **Basic Information** and **Initialize Configuration** sections for the server.
 
