--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
@@ -13,7 +13,7 @@
 ```sql
 VIEW_DEFINITION='SELECT * 
 FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_EXPLAIN
-WHERE IP =host_ip() AND PORT = rpc_port()'
+WHERE svr_ip=host_ip() AND svr_port= rpc_port()'
 ```
 
 字段解释如下表所示。
