zishao-v410-path-replace-0513

--- a/en-US/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/98.V4.1/97.V4.1.0_ee.md
@@ -87,7 +87,7 @@ This version provides the following core capabilities:
    OceanBase Database supports tenant-level IOPS isolation since V4.0. Resources are isolated based on resource units between tenants and based on I/O categories within each tenant. This ensures that each task in a tenant uses only the allocated resources and does not contend for resources of other tasks. However, the I/O categories are fixed and cannot be customized based on tasks, and resources cannot be further isolated for different users in the same tenant.
    Therefore, I/O resources and CPU resources are incorporated into the Resource Manager framework for unified resource isolation on the UI.
 
-   OceanBase Database V4.1 allows you to use the `DBMS_RESOURCE_MANAGER` package to customize resource isolation strategies for I/O resources. Specifically, you can call `CREATE_PLAN_DIRECTIVE` to set the `MIN_IOPS`, `MAX_IOPS`, and `WEIGHT_IOPS` parameters to define an isolation plan. You can define IOPS isolation plans for both Oracle and MySQL tenants. For more information, see [Configure SQL statement-level resource isolation (Oracle mode)](../../../7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/3.resource-isolation-at-sql-level-of-oracle-mode.md) and [Configure SQL statement-level resource isolation (MySQL mode)](../../../7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/3.resource-isolation-at-sql-level-of-mysql-mode.md).
+   OceanBase Database V4.1 allows you to use the `DBMS_RESOURCE_MANAGER` package to customize resource isolation strategies for I/O resources. Specifically, you can call `CREATE_PLAN_DIRECTIVE` to set the `MIN_IOPS`, `MAX_IOPS`, and `WEIGHT_IOPS` parameters to define an isolation plan. You can define IOPS isolation plans for both Oracle and MySQL tenants. For more information, see [Configure SQL statement-level resource isolation (Oracle mode)](../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/3.resource-isolation-at-sql-level-of-oracle-mode.md) and [Configure SQL statement-level resource isolation (MySQL mode)](../../../7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/3.resource-isolation-at-sql-level-of-mysql-mode.md).
 
 * Support for the Latin1 character set
 
@@ -593,7 +593,7 @@ The following table describes the changes made based on OceanBase Database Commu
 | `DBA_OB_CLUSTER_EVENT_HISTORY` | Displays only events related to cluster upgrades. This view is accessible only from the sys tenant.  | New | 4.1 |
 | `DBA_OB_TENANTS` | Displays the basic information of all tenants.  | Change | 4.1 |
 
-For more information, see [System views](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/1.overview-of-mysql-mode.md).
+For more information, see [System views](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/1.overview-of-mysql-mode.md).
 
 ### Parameter changes
 
