--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/1.consolidation-management-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/1.consolidation-management-overview.md
@@ -17,7 +17,7 @@
 
 * 并行合并：将数据划分到不同线程中并行做合并。
   
-更多合并相关的详细介绍信息，请参见 [合并](../../../../../7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.merge.md)。
+更多合并相关的详细介绍信息，请参见 [合并](../../../../../7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.about-merge.md)。
 
 合并相关的配置项及其说明请参见 [修改合并配置](../2.merge-management/7.modify-a-merge-configuration.md)。
 
