--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/6.delete-a-plan-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/6.delete-a-plan-for-oracle-mode.md
@@ -45,4 +45,4 @@
 
 ## 相关文档
 
-[DELETE_PLAN](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.DBMS_RESOURCE_MANAGER/6.DELETE_PLAN.md)
+[DELETE_PLAN](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.dbms-resource-manager-oracle/6.delete-plan-oracle.md)
