--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/7.delete-a-consumer-group-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/7.delete-a-consumer-group-for-oracle-mode.md
@@ -48,4 +48,4 @@
 
 ## 相关文档
 
-[DELETE_CONSUMER_GROUP](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.DBMS_RESOURCE_MANAGER/5.DELETE_CONSUMER_GROUP.md)
+[DELETE_CONSUMER_GROUP](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.dbms-resource-manager-oracle/5.delete-consume-group-oracle.md.md)
