410：Low error modification

--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/2.create-a-table-of-oracle-mode.md
@@ -33,7 +33,7 @@
 
 创建表时，需要先为表命名，以下是定义表名时需要遵循的要求：
 
-* 在 OceanBase 数据库的 MySQL 模式中，每个表的名称必须保证在数据库内唯一。
+* 在 OceanBase 数据库的 Oracle 模式中，每个表的名称必须保证在 Schema 库内唯一。
 
 * 为表命名时，应使用具有实际意义的表名，不要使用 `table1` 这样的表名。
 
