--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/19.create-profile-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/19.create-profile-of-oracle-mode.md
@@ -25,7 +25,7 @@ CREATE PROFILE "profile_name" LIMIT
 | FAILED_LOGIN_ATTEMPTS | 指定连续登录用户账户失败的次数。                |
 | PASSWORD_LOCK_TIME    | 当账户在限定的次数内连续尝试登录失败后，指定账户被锁定的天数。 |
 | PASSWORD_LIFE_TIME    | 指定同一密码可用于身份验证的有效天数。             |
-| PASSWORD_VERIFY_FUNCTION |允许将 PL 密码复杂性验证脚本作为参数传递给 `CREATE PROFILE` 语句。<br>对于函数，需要指定密码复杂性验证例程的名称。该函数必须存在于 SYS 模式中，并且用户必须对该函数具有 `EXECUTE` 权限。<br>如果指定该参数为 `NULL`，表示不执行密码验证。如果您为密码参数指定 `expr`，则表达式可以是除标量子查询表达式之外的任何形式。|
+| PASSWORD_VERIFY_FUNCTION |允许将 PL 密码复杂性验证脚本作为参数传递给 `CREATE PROFILE` 语句。<br>对于函数，需要指定密码复杂性验证例程的名称。该函数必须存在于 SYS Schema 中，并且用户必须对该函数具有 `EXECUTE` 权限。<br>如果指定该参数为 `NULL`，表示不执行密码验证。如果您为密码参数指定 `expr`，则表达式可以是除标量子查询表达式之外的任何形式。|
 | PASSWORD_GRACE_TIME   | 指定解除警告并开始允许账户登录的宽限期天数。          |
 | integer               | 表示为该参数设置的限制类型格式为整数。             |
 | UNLIMITED             | 表示没有为该参数设置限制。                   |
