--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -2,6 +2,14 @@
 
 本文介绍如何通过 ob-operator 在 Kubernetes 环境中部署 OceanBase 数据库。目前仅测试了 Kubernetes 1.23.6 版本，其他版本中部署如果有问题，欢迎和我们联系。
 
+本文主要分为以下三部分：
+
+1. 部署 ob-operator
+
+2. 部署 OceanBase 数据库
+
+3. 监控 OceanBase 数据库
+
 ## 部署 ob-operator
 
 使用 ob-operator 可以简化 OceanBase 在 Kubernetes 中的部署和运维，您可通过以下两种方式部署 ob-operator。
@@ -79,7 +87,7 @@ kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisione
 OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改，通过如下命令下载 OceanBase 数据库的配置文件 `obcluster.yaml`。
 
 ```shell
-kubectl https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
 ```
 
 配置文件内容示例如下。
@@ -166,6 +174,8 @@ spec:
 
 - `obagent-conf-file`：OBAgent 配置文件目录存储配置，用来存放 OBAgent 配置文件，不需要配置特别大，一般配置大小为 1Gi 就可以。
 
+- `volume`: 用作备份数据的存储，无备份需求可以不配置，但是集群创建成功之后无法再另外添加，需提前做好规划。
+
 配置文件修改之后可以通过如下命令进行部署：
 
 ```shell
@@ -214,7 +224,7 @@ spec:
             - name: OB_CLUSTER
               value: ob-test
             - name: RS_LIST
-              value: $(SVC_OB_TEST_SERVICE_HOST):$(SVC_OB_TEST_SERVICE_PORT)
+              value: $RS_LIST
           resources:
             limits:
               memory: 2Gi
@@ -227,7 +237,11 @@ spec:
 
 - OB_CLUSTER：ODP 连接的 OceanBase 集群名。
 
-- RS_LIST：OceanBase 集群的 rs_list，这里是通过两个环境变量 `SVC_OB_TEST_SERVICE_HOST` 和 `SVC_OB_TEST_SERVICE_PORT` 来配置，分别表示 OceanBase 集群的服务地址和端口。环境变量的名字和 OceanBase 数据库的集群名有关，其中 `OB_TEST` 部分是 OceanBase 集群名，需要转换成大写和下划线。
+- RS_LIST：OceanBase 集群的 rs_list，格式为 `${ip1}:${port1};${ip2}:${port2};${ip3}:${port3}`，需要根据实际部署情况来进行替换。rs_list 的地址可以通过以下两种方法获取。
+
+  - 方法一：连接到 OceanBase 集群中执行 `show parameters like 'rootservice_list';` 命令查看。
+
+  - 方法二：通过 `kubectl get RootService rs-${cluster_name} -n ${namespace} -o yaml` 命令查询出所有 Root Service 地址之后拼接成完整的 rs_list， 其中 `${cluster_name}` 和 `${namespace}` 需要替换成部署的 OceanBase 集群名和 namespace。
 
 service.yaml 文件中会开放两个端口，一个用来作 SQL 连接的端口，一个是监控数据的采集端口。service.yaml 文件内容如下：
 
@@ -279,16 +293,16 @@ obproxy-service   NodePort   xxx.xxx.xxx.xxx   <none>        2883:30083/TCP,2884
 
 ```shell
 # use clusterip without password
-obclient -hxxx.xxx.xxx.xxx -P2883 -uroot -A -c
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@sys oceanbase -A -c
 
 # use clusterip with password
-obclient -hxxx.xxx.xxx.xxx -P2883 -uroot -p****** -A -c
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@sys -p oceanbase -A -c
 
 # using nodeport without password
-obclient -h<node_ip> -P30083 -uroot -A -c
+obclient -h<node_ip> -P30083 -uroot@sys oceanbase -A -c
 
 # using nodeport with password
-obclient -h<node_ip> -P30083 -uroot -p****** -A -c
+obclient -h<node_ip> -P30083 -uroot@sys -p oceanbase -A -c
 ```
 
 ## 监控 OceanBase 数据库
@@ -414,6 +428,15 @@ data:
 ```
 
 其中，Grafana 的配置中会使用到 Prometheus 的服务地址作为数据源的配置（`datasources` 中的 `url` 字段），需要根据 Prometheus 的实际部署情况来填写。
+
+配置文件修改之后可以通过以下命令进行部署：
+
+```shell
+kubectl apply -f configmap.yaml
+kubectl apply -f pvc.yaml
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
+```
 
 #### 验证
 
