--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -241,7 +241,8 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 OceanBase 集群部署完成后，数据库中默认创建 sys 租户。此后可以根据业务需要使用 sys 租户新建普通租户。
 
-创建普通租户的详细信息，请参见 [创建租户](../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/2.create-tenant.md)。
+创建普通租户的详细信息，请参见 [创建租户](../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/5.create-oceanbase-tenant-command-line/
+2.create-tenant-command-line.md)。
 
 ### 连接 OceanBase 数据库
 
