--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/2.basic-sql-operations-of-mysql-mode.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/2.basic-sql-operations-of-mysql-mode.md
@@ -306,7 +306,7 @@ Query OK, 0 rows affected
   4 rows in set
   ```
 
-更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-of-mysql-mode.md) 章节。
+更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-sql-of-mysql-mode.md) 章节。
 
 ## 删除数据
 
