--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant.md
@@ -23,4 +23,4 @@
 
 ## 后续操作
 
-确定完集群资源后，可以根据剩余资源创建业务租户，详情请参见 [创建租户](2.create-tenant.md)。
+确定完集群资源后，可以根据剩余资源创建业务租户，详情请参见 [创建租户](2.create-tenant-graphical.md)。
