--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
@@ -16,7 +16,7 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
     DESTINATION [=] ip_port;
 ```
 
-资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.UNIT.md)。
+资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md)。
 
 参数解释：
 
