--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/1.identification-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/1.identification-of-mysql-mode.md
@@ -11,9 +11,9 @@ MySQL 模式中，一个 `user` 由 `user_name` 和 `host` 共同体组成。使
 示例如下：
 
 ```sql
-create user 'u1'@'%' identified by '***1***';
-create user 'u1'@'10.xxx.xxx.1' identified by '***1***';
-create user 'u1'@'10.xxx.xxx.2' identified by '***1***';
+create user 'u1'@'%' identified by '*******';
+create user 'u1'@'10.xxx.xxx.1' identified by '*******';
+create user 'u1'@'10.xxx.xxx.2' identified by '*******';
 ```
 
 其中：
