--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
@@ -28,7 +28,7 @@ OceanBase 数据库 MySQL 模式下，用户可以通过设置一系列系统变
 1. 使用 root 用户登录集群的 MySQL 租户。
 
     ```shell
-    obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p***1***
+    obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p*******
     ```
 
 2. 通过系统变量设置密码的复杂度。
@@ -64,7 +64,7 @@ OceanBase 数据库 MySQL 模式下，用户可以通过设置一系列系统变
     创建两个用户，分别设置为符合要求的密码和不符合要求的密码。
 
     ```shell
-    obclient> CREATE USER sectest1 IDENTIFIED BY '***1**';
+    obclient> CREATE USER sectest1 IDENTIFIED BY '******';
     ERROR 1819 (HY000): Your password does not satisfy the current policy
     requirements
 
