--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
@@ -37,6 +37,22 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 * `LOG_DISK_CAPACITY`：表示日志盘总的容量。
 
+  日志盘总容量由集群级别的配置项 `log_disk_size` 和 `log_disk_percentage` 共同控制。其中， `log_disk_size` 用于设置 Redo 日志磁盘的大小，默认值为 `0`； `log_disk_percentage` 用于设置 Redo 日志占用其所在磁盘总空间的百分比，默认值为 `0`。两个配置项的使用规则如下：
+
+  * 如果 `log_disk_size` 的值为 `0`，`log_disk_percentage` 的值不为 `0`，则系统以 `log_disk_percentage` 配置项设置的值分配日志盘空间。
+
+  * 如果 `log_disk_size` 的值不为 `0`，则无论 `log_disk_percentage` 的值是否为 `0`，系统均以 `log_disk_size` 配置项设置的值分配日志盘空间。
+
+  * 如果 `log_disk_size` 和 `log_disk_percentage` 的值均为 `0`，则系统会根据日志和数据是否共用同一磁盘来自动计算 Redo 日志占用其所在磁盘总空间的百分比：
+
+    * 共用时，Redo 日志占用其所在磁盘总空间的百分比为 30%。
+
+    * 独占时，Redo 日志占用其所在磁盘总空间的百分比为 90%。
+
+  有关配置项 `log_disk_size` 的更多说明信息，请参见 [log_disk_size](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/237.log_disk_size.md)。
+
+  有关配置项 `log_disk_percentage` 的更多说明信息，请参见 [log_disk_percentage](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/238.log_disk_percentage.md)。
+
 * `resource_hard_limit`：是一个配置项的值。
 
   在分配 Unit 时，系统会根据配置项 `resource_hard_limit` 的值来分配 CPU 资源。该配置项的默认值为 `100` ，表示不允许超卖，取值范围为 `[0, 10000]`。
