--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/3.delegation-of-authority-of-mysql-mode.md
@@ -11,14 +11,14 @@
    2. 创建用户 A 并授权，但是不加 `with grant option` 参数。
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO A IDENTIFIED BY '**1***';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO A IDENTIFIED BY '******';
       Query OK, 0 rows affected (0.034 sec)
       ```
 
    3. 使用 A 用户登录集群，并创建用户 B，同时授予和用户 A 相同的权限，发现报错。
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '******';
       ERROR 1227 (42501): Access denied; you need (at least one of) the GRANT privilege(s) for this operation
       ```
 
@@ -39,6 +39,6 @@
    3. 使用 A 用户登录集群，同时为 A 用户创建的 B 用户，授予和 A 用户相同的权限，提示授权成功。
 
       ```shell
-      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '**1***';
+      obclient> GRANT ALL PRIVILEGES ON *.* TO 'B' IDENTIFIED BY '******';
       Query OK, 0 rows affected (0.058 sec)
       ```
